# Elan

./: readme.md
.devcontainer/: Dockerfile  devcontainer.json
archive/elan/: readme
archive/mimir/win32/: libdcg.lib  libdcg2.lib  mimir_win32.tgz
elan-1.11/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
elan-1.11/egraphics/: Makefile.am  Makefile.in  Primitive.c  Primitive.h  PrimitiveP.h  egr_objects.c  egr_objects.h  elan_graphics.c  elan_graphics.h  graphics.e
elan-1.11/erts/: Makefile.am  Makefile.in  rts_alloc.c  rts_alloc.h  rts_error.c  rts_error.h  rts_files.c  rts_files.h  rts_init.c  rts_init.h  rts_ints.c  rts_ints.h  rts_random.c  rts_random.h  rts_reals.c  rts_reals.h  rts_system.c  rts_system.h  rts_term.c  rts_term.h  rts_test.c  rts_texts.c  rts_texts.h
elan-1.11/esocket/: Makefile.am  Makefile.in  elan_socket.c  elan_socket.h  socket.e
elan-1.11/ethread/: Makefile.am  Makefile.in  elan_threads.c  elan_threads.h  threads.e
elan-1.11/exp/: Makefile.am  Makefile.in  ackermann.e  beep.e  calc.e  complex.e  date.e  ehm.e  empty.e  fac.e  filecopy.e  filehello.e  ggd.e  graphics_test.e  hanoi.e  hanoi2.e  hello.e  intrange.e  ints.e  keesrecur.e  kwad.e  life.e  list.e  loopje.e  ltt.e  mandelbrot.e  nqueens.e  packet_test.e  pi.e  power.e  pqp.e  ptest.e  rand.e  reals.e  rotten.e  rows.e  rows2.e  rows2d.e  rows2d0.e  rows3.e  (+16 more)
elan-1.11/manuals/: Makefile.am  Makefile.in
elan-1.11/manuals/common/: Makefile.am  Makefile.in  abbrev.tex  artdefs.tex  esprit.sty
elan-1.11/manuals/compiler/: Makefile.am  Makefile.in  comp.ps  comp.tex  flow.eps  flow.fig  flow2.eps  flow2.fig
elan-1.11/manuals/language/: Makefile.am  Makefile.in  elan.ps  elan.tex
elan-1.11/manuals/man1/: Makefile.am  Makefile.in  elancc.1
elan-1.11/prelude/: Makefile.am  Makefile.in  elan0.e  kareltje.e  standard.e
elan-1.11/scripts/: Makefile.am  Makefile.in  mktests
mimir-3.1/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
mimir-3.1/dcg/: Makefile.am  Makefile.in  analyze.c  analyze.h  coder.c  coder.h  dcg_code.c  dcg_code.h  dcg_lex.c  dcg_lex.h  dcg_lex.l  dcg_parser.c  dcg_parser.h  dcg_parser.y  dcg_parser2.c  dcg_parser2.h  main.c  ndcg.dcg  options.c  options.h  xform_coder.c  xform_coder.h
mimir-3.1/libdcg/: Makefile.am  Makefile.in  dcg.def  dcg.h  dcg_alloc.c  dcg_alloc.h  dcg_arith.c  dcg_arith.h  dcg_binfile.c  dcg_binfile.h  dcg_dstring.c  dcg_dstring.h  dcg_dump.c  dcg_dump.h  dcg_error.c  dcg_error.h  dcg_fileutil.c  dcg_fileutil.h  dcg_lexutil.c  dcg_lexutil.h  dcg_procutil.c  dcg_procutil.h  dcg_random.c  dcg_random.h  dcg_string.c  dcg_string.h  dcg_version.h  dcg_warshall.c  dcg_warshall.h
mimir-3.1/libdcg2/: Makefile.am  Makefile.in  dcg_plist.c  dcg_plist.dcg  dcg_plist.def  dcg_plist.h  dcg_plist_ops.c  dcg_plist_ops.h
mimir-3.1/manuals/: Makefile.am  Makefile.in
mimir-3.1/manuals/man1/: Makefile.am  Makefile.in  dcg.1
mimir-3.1/msvc100/: Makefile.am  README.vc100  mimir.sln
mimir-3.1/msvc100/CVS/: Entries  Repository
mimir-3.1/msvc100/dcg/: Makefile.am  dcg.vcxproj
mimir-3.1/msvc100/dcg/CVS/: Entries  Repository
mimir-3.1/msvc100/libdcg/: Makefile.am  libdcg.vcxproj
mimir-3.1/msvc100/libdcg/CVS/: Entries  Repository
mimir-3.1/msvc100/libdcg2/: Makefile.am  libdcg2.vcxproj
mimir-3.1/msvc100/libdcg2/CVS/: Entries  Repository
